JH-160 flatten syringe update request (#220)
