# service-jehlomat/src/main/kotlin/model/Syringe.kt
@@ -2,25 +2,25 @@ package model
 
 import kotlinx.serialization.Serializable
 import model.location.Location
+import model.syringe.SyringeFlat
 import model.syringe.SyringeStatus
 import model.user.UserInfo
-import utils.UnchangeableByPut
 
 @Serializable
 data class Syringe (
-    @UnchangeableByPut val id: String,
-    @UnchangeableByPut val createdAt: Long,
-    @UnchangeableByPut val createdBy: UserInfo?,
+    val id: String,
+    val createdAt: Long,
+    val createdBy: UserInfo?,
     val reservedTill: Long?,
     val reservedBy: UserInfo?,
     val demolishedAt: Long?,
     val demolishedBy: UserInfo?,
     val demolisherType: Demolisher,
-    @UnchangeableByPut val photo: String,
-    @UnchangeableByPut val count: Int,
-    @UnchangeableByPut val note: String,
-    @UnchangeableByPut val gps_coordinates: String,
-    @UnchangeableByPut val location: Location,
+    val photo: String,
+    val count: Int,
+    val note: String,
+    val gps_coordinates: String,
+    val location: Location,
     val demolished: Boolean
 )
 
@@ -33,4 +33,21 @@ fun Syringe.toSyringeInfo() = SyringeInfo(
     gps_coordinates = gps_coordinates,
     location = location,
     status = SyringeStatus.fromDbRecord(this)
+)
+
+fun Syringe.toFlatObject() = SyringeFlat(
+    id = id,
+    createdAt = createdAt,
+    createdById = createdBy?.id,
+    reservedTill = reservedTill,
+    reservedById = reservedBy?.id,
+    demolishedAt = demolishedAt,
+    demolishedById = demolishedBy?.id,
+    demolisherType = demolisherType,
+    photo = photo,
+    count = count,
+    note = note,
+    gps_coordinates = gps_coordinates,
+    locationId = location.id,
+    demolished = demolished
 )
